fixed face danger

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1701,7 +1701,7 @@
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
-                                <div class="sheet-asset-ability">When you <em>Enter the Fray</em> +edge in a fight by nimbly avoiding your foe’s attacks, add +1 and take +1 momentum on a hit.</div>
+                                <div class="sheet-asset-ability">When you <em>Face Danger</em> +edge in a fight by nimbly avoiding your foe’s attacks, add +1 and take +1 momentum on a hit.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox3">
@@ -1852,7 +1852,7 @@
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
-                                <div class="sheet-asset-ability">When you <em>Secure an Advantage</em> or <em>Enter the Fray</em> by cobbling together an ad hoc tool or apparatus, add +1 and take +1 momentum on a hit. After you roll, you may also suffer -1 supply and add +1 more.</div>
+                                <div class="sheet-asset-ability">When you <em>Secure an Advantage</em> or <em>Face Danger</em> by cobbling together an ad hoc tool or apparatus, add +1 and take +1 momentum on a hit. After you roll, you may also suffer -1 supply and add +1 more.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox3">
@@ -2011,7 +2011,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you <em>Heal</em> your horse, or when you <em>Enter the Fray</em> to calm or encourage it, add +1 and take +1 momentum on a hit.</div>
+                                <div class="sheet-asset-ability">When you <em>Heal</em> your horse, or when you <em>Face Danger</em> to calm or encourage it, add +1 and take +1 momentum on a hit.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
@@ -2072,7 +2072,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox1">
-                                <div class="sheet-asset-ability">When you <em>Enter the Fray</em> or <em>Gather Information</em> to identify or detect mystic forces, add +1 and take +1 momentum on a hit.</div>
+                                <div class="sheet-asset-ability">When you <em>Face Danger</em> or <em>Gather Information</em> to identify or detect mystic forces, add +1 and take +1 momentum on a hit.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
@@ -2260,7 +2260,7 @@
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
-                                <div class="sheet-asset-ability">When you <em>Enter the Fray</em> or <em>Secure an Advantage</em> by hiding or sneaking in the woodlands, add +1 and take +1 momentum on a hit.</div>
+                                <div class="sheet-asset-ability">When you <em>Face Danger</em> or <em>Secure an Advantage</em> by hiding or sneaking in the woodlands, add +1 and take +1 momentum on a hit.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox3">
@@ -2278,7 +2278,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you <em>Secure an Advantage</em> by crafting a useful item using your specialty, or when you <em>Enter the Fray</em> to create or repair an item in a perilous situation, add +1 and take +1 momentum on a hit</div>
+                                <div class="sheet-asset-ability">When you <em>Secure an Advantage</em> by crafting a useful item using your specialty, or when you <em>Face Danger</em> to create or repair an item in a perilous situation, add +1 and take +1 momentum on a hit</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
@@ -2286,7 +2286,7 @@
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox3">
-                                <div class="sheet-asset-ability">When you give the item you create as a gift to commemorate an important event or relationship, you may (one time only) reroll any dice when you <em>Compel</em>,  <em>Forge a Bond</em>,  or <em>Test Your Bond</em> .</div>
+                                <div class="sheet-asset-ability">When you give the item you create as a gift to commemorate an important event or relationship, you may (one time only) reroll any dice when you <em>Compel</em>, <em>Forge a Bond</em>, or <em>Test Your Bond</em> .</div>
                             </div>
                         </div>
                     </div>
@@ -2384,7 +2384,7 @@
                                 </div>
                                 <div class="sheet-flex-container">
                                     <input type="checkbox" class="sheet-asset-ability" name="attr_combattalentassetcheckbox3">
-                                    <div class="sheet-asset-ability">When you <em>Enter the Fray</em> or <em>Clash</em> against a brawling attack (such as punches, kicks, slams, trips, or grapples), add +1.</div>
+                                    <div class="sheet-asset-ability">When you <em>Face Danger</em> or <em>Clash</em> against a brawling attack (such as punches, kicks, slams, trips, or grapples), add +1.</div>
                                 </div>
                             </div>
                         </div>
@@ -2544,7 +2544,7 @@
                             <div class="sheet-flex-wrapper">
                                 <div class="sheet-flex-container">
                                     <input type="checkbox" class="sheet-asset-ability" name="attr_combattalentassetcheckbox1" checked>
-                                    <div class="sheet-asset-ability">When you <em>Enter the Fray</em> using your shield as cover, add +1. When you <em>Clash</em> in close quarters, take +1 momentum on a strong hit.</div>
+                                    <div class="sheet-asset-ability">When you <em>Face Danger</em> using your shield as cover, add +1. When you <em>Clash</em> in close quarters, take +1 momentum on a strong hit.</div>
                                 </div>
                                 <div class="sheet-flex-container">
                                     <input type="checkbox" class="sheet-asset-ability" name="attr_combattalentassetcheckbox2">
@@ -2567,7 +2567,7 @@
                             <div class="sheet-flex-wrapper">
                                 <div class="sheet-flex-container">
                                     <input type="checkbox" class="sheet-asset-ability" name="attr_combattalentassetcheckbox1" checked>
-                                    <div class="sheet-asset-ability">When you <em>Enter the Fray</em> by holding a foe at bay using your spear’s reach, roll +iron or +edge. If you score a hit, you may...
+                                    <div class="sheet-asset-ability">When you <em>Face Danger</em> by holding a foe at bay using your spear’s reach, roll +iron or +edge. If you score a hit, you may...
                                         <ul>
                                             <li>Iron: <em>Strike</em> (if you have initiative) or <em>Clash</em> now, and add +1.</li>
                                             <li>Edge: Take +1 momentum.</li>
@@ -2576,7 +2576,7 @@
                                 </div>
                                 <div class="sheet-flex-container">
                                     <input type="checkbox" class="sheet-asset-ability" name="attr_combattalentassetcheckbox2">
-                                    <div class="sheet-asset-ability">When you <em>Strike</em> or <em>Clash</em> in close combat and score a strong hit, you may drive your spear home and inflict +2 harm. If the fight continues, <em>Enter the Fray</em> +iron to retrieve your spear before using it again.</div>
+                                    <div class="sheet-asset-ability">When you <em>Strike</em> or <em>Clash</em> in close combat and score a strong hit, you may drive your spear home and inflict +2 harm. If the fight continues, <em>Face Danger</em> +iron to retrieve your spear before using it again.</div>
                                 </div>
                                 <div class="sheet-flex-container">
                                     <input type="checkbox" class="sheet-asset-ability" name="attr_combattalentassetcheckbox3">
@@ -2731,7 +2731,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you create a simulacrum, roll +heart. On a strong hit, your creation is given unnatural life. If it aids you as you make a move to assault or overcome an obstacle through strength, add +2. It has 3 health and suffers harm as appropriate, but is not a companion and may not be healed. At 0 health, it is dead. On a weak hit, as above, but if you roll a 1 on your action die when aided by your creation, you must <em>Enter the Fray</em> +heart to keep it from turning on you (as a formidable foe).</div>
+                                <div class="sheet-asset-ability">When you create a simulacrum, roll +heart. On a strong hit, your creation is given unnatural life. If it aids you as you make a move to assault or overcome an obstacle through strength, add +2. It has 3 health and suffers harm as appropriate, but is not a companion and may not be healed. At 0 health, it is dead. On a weak hit, as above, but if you roll a 1 on your action die when aided by your creation, you must <em>Face Danger</em> +heart to keep it from turning on you (as a formidable foe).</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox2">
@@ -2837,7 +2837,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you consume the mystical essence of your surroundings, roll +wits. On a strong hit, add the value of your action die to your essence track (max 6). You may then <em>Secure an Advantage</em> or <em>Enter the Fray</em> +essence to create minor mystical effects or illusions. If you do, suffer -1 essence and take +1 momentum on a hit. On a weak hit, as above, but capturing these energies is harrowing; <em>Endure Stress</em> (2 stress).</div>
+                                <div class="sheet-asset-ability">When you consume the mystical essence of your surroundings, roll +wits. On a strong hit, add the value of your action die to your essence track (max 6). You may then <em>Secure an Advantage</em> or <em>Face Danger</em> +essence to create minor mystical effects or illusions. If you do, suffer -1 essence and take +1 momentum on a hit. On a weak hit, as above, but capturing these energies is harrowing; <em>Endure Stress</em> (2 stress).</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox2">
@@ -2891,7 +2891,7 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox2">
                                 <div class="sheet-asset-ability"
-                                    name="attr_assetability2">As above, and the wielder may also (one time only) add +1 and take +2 momentum on a hit when they <em>Draw the Circle</em>,  <em>Enter the Fray</em>,  or <em>Battle</em> .</div>
+                                    name="attr_assetability2">As above, and the wielder may also (one time only) add +1 and take +2 momentum on a hit when they <em>Draw the Circle</em>, <em>Enter the Fray</em>, or <em>Battle</em> .</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox3">
@@ -2998,7 +2998,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you cloak yourself with the gossamer veil of the shadow realms, roll +shadow. On a strong hit, take +1 momentum. Then, reroll any dice (one time only) when you make a move by ambushing, hiding, or sneaking. On a weak hit, as above, but the shadows try to lead you astray. You must first <em>Enter the Fray</em> to find your way.</div>
+                                <div class="sheet-asset-ability">When you cloak yourself with the gossamer veil of the shadow realms, roll +shadow. On a strong hit, take +1 momentum. Then, reroll any dice (one time only) when you make a move by ambushing, hiding, or sneaking. On a weak hit, as above, but the shadows try to lead you astray. You must first <em>Face Danger</em> to find your way.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox2">
