(assets) correct minor content errors

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1492,7 +1492,7 @@
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox2">
-                                <div class="sheet-asset-ability"><b>Indomitable:</b> When you make the Companion <em>Endure Harm</em> move for your wyvern, add +2 and take +1 momentum on a hit.</div>
+                                <div class="sheet-asset-ability"><b>Indomitable:</b> When you make the <em>Companion Endure Harm</em> move for your wyvern, add +2 and take +1 momentum on a hit.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox3">
@@ -1563,7 +1563,7 @@
                         <option value="veteran">Veteran</option>
                         <option value="waterborn">Waterborn</option>
                         <option value="wayfinder">Wayfinder</option>
-                        <option value="weapon-master">Weapon-master</option>
+                        <option value="weapon-master">Weaponmaster</option>
                         <option value="wildblood">Wildblood</option>
                         <option value="wright">Wright</option>
                     </select>
@@ -1628,7 +1628,7 @@
                     <input type="checkbox" class="sheet-battle-scarred sheet-hidden-flex" name="attr_assetpathdivbattle-scarred">
                     <div class="sheet-battle-scarred sheet-hidden-flex">
                         <div class="sheet-asset-description">
-                            <div class="sheet-asset-description-text">Once you mark a bond with a leader or faction...</div>
+                            <div class="sheet-asset-description-text">Once you become maimed...</div>
                         </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
@@ -1840,7 +1840,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox1">
-                                <div class="sheet-asset-ability">When you Check your Gear, you may roll +wits (instead of +supply). If you do, envision how you make do with a clever solution, and take +1 momentum on a hit.</div>
+                                <div class="sheet-asset-ability">When you <em>Check your Gear</em>, you may roll +wits (instead of +supply). If you do, envision how you make do with a clever solution, and take +1 momentum on a hit.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
@@ -1916,12 +1916,12 @@
                     <input type="checkbox" class="sheet-oathbreaker sheet-hidden-flex" name="attr_assetpathdivoathbreaker">
                     <div class="sheet-oathbreaker sheet-hidden-flex">
                         <div class="sheet-asset-description">
-                            <div class="sheet-asset-description-text">Once you Forsake a Vow...</div>
+                            <div class="sheet-asset-description-text">Once you <em>Forsake a Vow</em>...</div>
                         </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">This asset counts as a debility. One time only, when you <em>Swear an Iron Vow</em> to redeem yourself (extreme or greater), give that vow a special mark. When you <em>Reach a Milestone</em> on the marked vow, take +2 momentum.</div>
+                                <div class="sheet-asset-ability"><b>This asset counts as a debility.</b> One time only, when you <em>Swear an Iron Vow</em> to redeem yourself (extreme or greater), give that vow a special mark. When you <em>Reach a Milestone</em> on the marked vow, take +2 momentum.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
@@ -1929,7 +1929,7 @@
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox3">
-                                <div class="sheet-asset-ability">When you <em>Fulfill Your Vow</em> on your marked quest and score a hit, you find redemption and automatically activate this ability at no cost. You may then improve one of your stats by +1 and discard this asset.</div>
+                                <div class="sheet-asset-ability">When you <em>Fulfill Your Vow</em> on your marked quest and score a hit, you find redemption and automatically activate this ability at no cost. You may then improve one of your stats by +1 and <b>discard this asset</b>.</div>
                             </div>
                         </div>
                     </div>
@@ -1999,7 +1999,7 @@
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
-                                <div class="sheet-asset-ability">When you Undertake a Journey, you may push your horse harder and add +1 (after rolling). If you do, make the Companion <em>Endure Harm</em> move (1 harm).</div>
+                                <div class="sheet-asset-ability">When you <em>Undertake a Journey</em>, you may push your horse harder and add +1 (after rolling). If you do, make the <em>Companion Endure Harm</em> move (1 harm).</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox3">
@@ -2088,11 +2088,6 @@
                     </div>
                     <input type="checkbox" class="sheet-spirit-bound sheet-hidden-flex" name="attr_assetpathdivspirit-bound">
                     <div class="sheet-spirit-bound sheet-hidden-flex">
-                        <div class="sheet-asset-description">
-                            <div class="sheet-asset-write-in">
-                                Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetpathnameinput" value="">
-                            </div>
-                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox1" checked>
@@ -2450,8 +2445,8 @@
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_combattalentassetcheckbox1" checked>
                                 <div class="sheet-asset-ability">When you equip or adjust your armor, choose one.
                                     <ul>
-                                        <li>Lightly armored: When you <em>Endure Harm</em> in a fight, add +1 and take +1 momentum on a hit.</li>
-                                        <li>Geared for war: Mark encumbered. When you <em>Endure Harm</em> in a fight, add +2 and take +1 momentum on a hit.</li>
+                                        <li><b>Lightly armored:</b> When you <em>Endure Harm</em> in a fight, add +1 and take +1 momentum on a hit.</li>
+                                        <li><b>Geared for war:</b> Mark encumbered. When you <em>Endure Harm</em> in a fight, add +2 and take +1 momentum on a hit.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -2662,12 +2657,12 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you summon a flock of crows and ask a single question, roll +wits. On a strong hit, you interpret their calls as a helpful omen. Envision the response (Ask the Oracle if unsure) and take +2 momentum. On a weak hit, the crows ignore your question and offer a clue to an unrelated problem or opportunity in this area. Envision what you learn (Ask the Oracle if unsure), and take +1 momentum.</div>
+                                <div class="sheet-asset-ability">When you summon a flock of crows and ask a single question, roll +wits. On a strong hit, you interpret their calls as a helpful omen. Envision the response (<em>Ask the Oracle</em> if unsure) and take +2 momentum. On a weak hit, the crows ignore your question and offer a clue to an unrelated problem or opportunity in this area. Envision what you learn (<em>Ask the Oracle</em> if unsure), and take +1 momentum.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox2">
                                 <div class="sheet-asset-ability"
-                                    name="attr_assetability2">As above, and the crows will also help guide you on the proper path. On a hit, add +1 on the next segment when you Undertake a Journey.</div>
+                                    name="attr_assetability2">As above, and the crows will also help guide you on the proper path. On a hit, add +1 on the next segment when you <em>Undertake a Journey</em>.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox3">
@@ -2730,7 +2725,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you wear an animal pelt and dance in moonlight, roll +wits. On a strong hit, you or an ally may wear the pelt and add +1 when making moves with the related stat (wolf-edge; beariron; deer-heart; fox-shadow; boarwits). If the wearer rolls a 1 on their action die while making a move using the pelt, the magic is spent. On a weak hit, as above, but the wilds call as you dance; <em>Endure Stress</em> (2 stress).</div>
+                                <div class="sheet-asset-ability">When you wear an animal pelt and dance in moonlight, roll +wits. On a strong hit, you or an ally may wear the pelt and add +1 when making moves with the related stat (wolf-edge; bear-iron; deer-heart; fox-shadow; boar-wits). If the wearer rolls a 1 on their action die while making a move using the pelt, the magic is spent. On a weak hit, as above, but the wilds call as you dance; <em>Endure Stress</em> (2 stress).</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox2">
@@ -2749,7 +2744,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you surround the remains of a recently deceased intelligent creature with lit candles, and summon its spirit, roll +heart. Add +1 if you share a bond. On a strong hit, the spirit appears and you may converse for a few minutes. Make moves as appropriate (add +1). On a weak hit, as above, but the spirit also delivers troubling news unrelated to your purpose. Envision what it tells you (Ask the Oracle if unsure) and <em>Endure Stress</em> (1 stress).</div>
+                                <div class="sheet-asset-ability">When you surround the remains of a recently deceased intelligent creature with lit candles, and summon its spirit, roll +heart. Add +1 if you share a bond. On a strong hit, the spirit appears and you may converse for a few minutes. Make moves as appropriate (add +1). On a weak hit, as above, but the spirit also delivers troubling news unrelated to your purpose. Envision what it tells you (<em>Ask the Oracle</em> if unsure) and <em>Endure Stress</em> (1 stress).</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox2">
@@ -2967,7 +2962,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you speak a person’s name three times to the wind, roll +wits. On a strong hit, the wind whispers of this person’s need. Envision what you hear (Ask the Oracle if unsure). If you use this information or fulfill this need when you <em>Compel</em> them, you may reroll any dice (one time only). On a weak hit, as above, but this person’s need creates a troubling dilemma or complication; <em>Endure Stress</em> (1 stress).</div>
+                                <div class="sheet-asset-ability">When you speak a person’s name three times to the wind, roll +wits. On a strong hit, the wind whispers of this person’s need. Envision what you hear (<em>Ask the Oracle</em> if unsure). If you use this information or fulfill this need when you <em>Compel</em> them, you may reroll any dice (one time only). On a weak hit, as above, but this person’s need creates a troubling dilemma or complication; <em>Endure Stress</em> (1 stress).</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox2">
@@ -3005,7 +3000,7 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox1" checked>
-                                <div class="sheet-asset-ability">When you commune with the spirits of a place, roll +heart. If you share a bond with someone there, add +1. On a strong hit, you are tethered. When you <em>Undertake a Journey</em> to return, you may roll +spirit or +heart (instead of +wits), and take +1 momentum on a hit. When you Reach Your Destination, take +2 momentum on a strong hit. The tether is lost if you perform this ritual elsewhere, or when you <em>Face Desolation</em> . On a weak hit, as above, but the spirits reveal a disturbing aspect of the place; <em>Endure Stress</em> (2 stress).</div>
+                                <div class="sheet-asset-ability">When you commune with the spirits of a place, roll +heart. If you share a bond with someone there, add +1. On a strong hit, you are tethered. When you <em>Undertake a Journey</em> to return, you may roll +spirit or +heart (instead of +wits), and take +1 momentum on a hit. When you <em>Reach Your Destination</em>, take +2 momentum on a strong hit. The tether is lost if you perform this ritual elsewhere, or when you <em>Face Desolation</em> . On a weak hit, as above, but the spirits reveal a disturbing aspect of the place; <em>Endure Stress</em> (2 stress).</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_ritualassetcheckbox2">
@@ -3066,7 +3061,7 @@
                                     <ul>
                                         <li>When a foe first crosses the boundary, take +1 momentum.</li>
                                         <li>When you first inflict harm against a foe within the boundary, inflict +1 harm. </li>
-                                        <li>Your ward is ‘likely’ (Ask the Oracle) to trap a foe within the boundary.</li>
+                                        <li>Your ward is ‘likely’ (<em>Ask the Oracle</em>) to trap a foe within the boundary.</li>
                                     </ul>
                                 </div>
                             </div>
