Savage Worlds (Tabbed Layout) Typos (#5717)
* Typos and Style

Fixed code style issues (stray single quotes) plus a myriad typos. Did not change sophmore to sophomore when it was being used as a variable name to avoid issues with existing sheets, but did fix the spelling of any displays.

* [Savage Worlds Tabbed] Charisma Config

Added a configuration option to disable Charisma, as it's not used in SWADE.

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -5,7 +5,7 @@
     -- o Add a Strain config so the      --
     --   the config section houses the   --
     --   the rule (based on Vigor,       --
-    --   Spirit, or Lowsest of Spirit or --
+    --   Spirit, or Lowest of Spirit or --
     --   Vigor).                         --
     -------------------------------------*/
 
@@ -1084,7 +1084,7 @@
           		else if (xpVal >=20) {
           			console.log("Setting rank to Seasoned");
           			setAttrs({Rank: 2});
-          			console.log("Setting class to Sophmore");
+          			console.log("Setting class to Sophomore");
           			setAttrs({Class: 2});
           		}
           		else {
@@ -1105,7 +1105,7 @@
       		    else if (xpVal < 8) {
       		        console.log("Setting rank to Seasoned");
           			setAttrs({Rank: 2});
-          			console.log("Setting class to Sophmore");
+          			console.log("Setting class to Sophomore");
           			setAttrs({Class: 2});
       		    }
       		    else if (xpVal < 12) {
@@ -3592,7 +3592,7 @@
 									</select>
 									<select class='sheet-Class sheet-rank' name='attr_class' title="@{class}" value='freshman' readonly>
 										<option value='1' data-i18n="freshman">Freshman</option>
-										<option value='2' data-i18n="sophmore">Sophmore</option>
+										<option value='2' data-i18n="sophmore">Sophomore</option>
 										<option value='3' data-i18n="junior">Junior</option>
 										<option value='4' data-i18n="senior">Senior</option>
 										<option value='5' data-i18n="grad-student">Grad Student</option>
@@ -5961,7 +5961,7 @@
     					        <div class="sheet-derivemisc">&nbsp;</div>
     					    </div>
     					    <!-- Charisma -->
-    					    <input type="checkbox" class="sheet-useCharisma" name="attr_usecharisma" style="display: none;" checked />
+    					    <input type="checkbox" class="sheet-useCharisma" name="attr_usecharisma" style="display: none;"/>
     					    <div class="sheet-basederived sheet-charisma">
     					        <div class="sheet-derivelabel" data-i18n="charisma">Charisma</div>
     					        <div class="sheet-derivebase"><input type="number" name="attr_charisma" class="sheet-derivedStat" title="@{charisma}" value="0"/></div>
@@ -6718,7 +6718,7 @@
     					    <div class='sheet-powerrow' style="align-items: flex-end; margin-bottom: 20px; border-bottom: 1px solid silver; overflow: hidden;">
 								<h4 class="sheet-repeatingHeader sheet-spellOutput">&nbsp;</h4>
 								<h4 class="sheet-repeatingHeader sheet-powerbutton">&nbsp;</h4>
-        					    <h4 class="sheet-repeatingHeader sheet-power" style='margin-left:'><span name="attr_powerlabelsingular"></span></h4>
+        					    <h4 class="sheet-repeatingHeader sheet-power"><span name="attr_powerlabelsingular"></span></h4>
         					    <h4 class="sheet-repeatingHeader sheet-pp"><span name="attr_ppabbr"></span></h4>
         					    <h4 class="sheet-repeatingHeader sheet-powerrange" data-i18n="range">Range</h4>
         					    <h4 class="sheet-repeatingHeader sheet-powerdamage" data-i18n="damage">Damage</h4>
@@ -7303,7 +7303,7 @@
 										<input type="number" class="sheet-weaponItem sheet-shiprof" name="attr_SShipWeaponRoF" data-i18n-placeholder="rof" placeholder="RoF" />
 										<div class="sheet-weaponItem sheet-shipdamage">
 										    <input type="number" name="attr_NoDmgDice" class="sheet-short" style="width: 35px;" value="2" />
-    										<select name="attr_RDmgType" class="dtype" style="margin:0px;'">
+    										<select name="attr_RDmgType" class="dtype" style="margin:0px;">
     											<option value="d4!">d4</option>
     											<option value="d6!">d6</option>
     											<option value="d8!">d8</option>
@@ -7450,7 +7450,7 @@
 										<input type="number" class="sheet-weaponItem sheet-shiprof" name="attr_FShipWeaponRoF" data-i18n-placeholder="rof" placeholder="RoF" />
 										<div class="sheet-weaponItem sheet-shipdamage">
 										    <input type="number" name="attr_NoDmgDice" class="sheet-short" style="width: 35px;" value="2" />
-    										<select name="attr_RDmgType" class="dtype" style="margin:0px;'">
+    										<select name="attr_RDmgType" class="dtype" style="margin:0px;">
     											<option value="d4!">d4</option>
     											<option value="d6!">d6</option>
     											<option value="d8!">d8</option>
@@ -7573,7 +7573,7 @@
 										<input type="number" class="sheet-weaponItem sheet-shiprof" name="attr_GVWeaponRoF" data-i18n-placeholder="rof" placeholder="RoF" />
 										<div class="sheet-weaponItem sheet-shipdamage">
 										    <input type="number" name="attr_NoDmgDice" class="sheet-short" style="width: 35px;" value="2" />
-    										<select name="attr_RDmgType" class="dtype" style="margin:0px;'">
+    										<select name="attr_RDmgType" class="dtype" style="margin:0px;">
     											<option value="d4!">d4</option>
     											<option value="d6!">d6</option>
     											<option value="d8!">d8</option>
@@ -7705,7 +7705,7 @@
 										<input type="number" class="sheet-weaponItem sheet-shiprof" name="attr_WalkerWeaponRoF" data-i18n-placeholder="rof" placeholder="RoF" />
 										<div class="sheet-weaponItem sheet-shipdamage">
 										    <input type="number" name="attr_NoDmgDice" class="sheet-short" style="width: 35px;" value="2" />
-    										<select name="attr_RDmgType" class="dtype" style="margin:0px;'">
+    										<select name="attr_RDmgType" class="dtype" style="margin:0px;">
     											<option value="d4!">d4</option>
     											<option value="d6!">d6</option>
     											<option value="d8!">d8</option>
